--- a/css/labendicion.webflow.css
+++ b/css/labendicion.webflow.css
@@ -1,19 +1,34 @@
+.w-layout-blockcontainer {
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+@media screen and (max-width: 991px) {
+  .w-layout-blockcontainer {
+    max-width: 728px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .w-layout-blockcontainer {
+    max-width: none;
+  }
+}
+
 .section-logo {
-  z-index: -1;
+  z-index: 1;
   width: 100%;
   height: 100%;
   object-fit: fill;
-  flex-direction: column;
-  justify-content: space-around;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   font-weight: 400;
-  display: none;
-  position: fixed;
-  top: 0%;
-  bottom: 0%;
-  left: 0%;
-  right: 0%;
+  display: flex;
+  position: relative;
 }
 
 .div-logo {
@@ -22,7 +37,7 @@
 }
 
 .link {
-  color: #000;
+  color: #fff;
   text-transform: uppercase;
   font-family: "Authenticsans condensed 90", sans-serif;
   font-size: 24px;
@@ -40,9 +55,20 @@
 }
 
 .body {
+  color: #f6cac7;
+  text-align: justify;
+  background-color: #000;
+  background-image: linear-gradient(rgba(0, 0, 0, .68), rgba(0, 0, 0, .68)), url('../images/Screenshot-2023-09-19-at-12.58.10-p.m..jpg');
+  background-position: 0 0, 50% 100%;
+  background-size: auto, auto;
+  background-attachment: scroll, fixed;
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
+  padding-top: 0;
+  padding-bottom: 4em;
+  font-family: Sanchez, sans-serif;
+  font-size: 16px;
   display: flex;
 }
 
@@ -74,11 +100,6 @@
   height: 100%;
   align-items: center;
   display: flex;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
 }
 
 .section-logo-interaction {
@@ -88,15 +109,61 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  display: flex;
+  display: none;
   position: fixed;
 }
 
-@media screen and (max-width: 991px) {
-  .section-logo {
-    position: absolute;
-  }
+.image {
+  width: 100%;
+  max-width: 730px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+.text-span {
+  color: #ca3d33;
+}
+
+.image-2 {
+  width: 100%;
+  max-width: 440px;
+  margin: 3em auto;
+}
+
+.container {
+  max-width: 640px;
+  flex-direction: column;
+  padding-left: 2em;
+  padding-right: 2em;
+  display: flex;
+}
+
+.text-span-2 {
+  color: #ca3d33;
+  font-family: UnifrakturMaguntia, sans-serif;
+  font-size: 70px;
+}
+
+.image-3 {
+  max-width: 380px;
+  margin-top: 2em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.link-block {
+  width: 32px;
+  filter: invert() brightness(20000%);
+}
+
+.div-block {
+  grid-column-gap: 32px;
+  grid-row-gap: 20px;
+  justify-content: center;
+  display: flex;
+}
+
+@media screen and (max-width: 991px) {
   .div-logo {
     position: static;
   }
@@ -107,11 +174,6 @@
     margin-top: 30px;
     margin-bottom: 15px;
     display: flex;
-    position: static;
-    top: 0%;
-    bottom: auto;
-    left: auto;
-    right: 0%;
   }
 
   .div-logo {
